--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,11 @@ readme = "README.md"
 python = ">=3.11"
 pandas = "^2.2.2"
 jupyterlab = "^4.2.2"
+matplotlib = "^3.9.0"
+altair = "^5.3.0"
+
+[tool.poetry.group.stats.dependencies]
+missingno = "^0.5.2"
 
 
 [build-system]
